<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/EditTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:maxLength="11"
            android:hint="@string/hintPhone" />

        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:maxLength="11"
            android:hint="@string/hintName" />

        <EditText
            android:id="@+id/EditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:maxLength="15"
            android:hint="@string/hintPass" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sign_up"
        android:text="@string/register"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/btn_sign_up"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"/>

</RelativeLayout>