<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".FoodDetail">

    <LinearLayout
        android:id="@+id/mainLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/mainPhoto"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />


    <TextView
        android:id="@+id/FoodMainName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:background="#66AEAEAE"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4D4CAF50"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/FoodFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#66AEAEAE"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainLinear"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnAddToCart"
        android:layout_marginEnd="15dp"
        android:background="@color/btn_sign_in"
        android:padding="10dp"
        android:text="@string/addToCart"
        android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_go_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btn_sign_up"
            android:padding="10dp"
            android:text="@string/btnGoToCart"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>